--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -29,9 +29,9 @@
 								aria-haspopup="true" aria-expanded="false">Categoria</a>
 
 							<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-								<a class="dropdown-item" th:href="@{/category/list}">Listado
+								<a class="dropdown-item" th:href="@{/categories}">Listado
 									de Categoria</a> <a class="dropdown-item"
-									th:href="@{/category/form}">Crear Categoria</a>
+									th:href="@{/categories/new}">Crear Categoria</a>
 							</div>
 						</div>
 					</li>
@@ -55,7 +55,7 @@
 								aria-haspopup="true" aria-expanded="false">Proveedor</a>
 
 							<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-								<a class="dropdown-item" th:href="@{/category/list}">Listado
+								<a class="dropdown-item" th:href="@{/providers}">Listado
 									de Prodveedor</a> <a class="dropdown-item"
 									th:href="@{/category/form}">Crear Proveedor</a>
 							</div>
