--- a/src/main/resources/templates/providers/list.html
+++ b/src/main/resources/templates/providers/list.html
@@ -19,7 +19,7 @@
 				<table class="table table-striped ">
 					<thead>
 						<tr>
-							<th>Id</th>
+							<th scope="col">#</th>
 							<th>Nombre</th>
 							<th>Email</th>
 							<th>Phone</th>
