--- a/src/main/resources/templates/providers/edit.html
+++ b/src/main/resources/templates/providers/edit.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head">
-<meta charset="UTF-8" />
-<title>Nuevo proveedor</title>
+<meta charset="UTF-8"/>
+<title>Index</title>
 </head>
 <body>
-	<header th:replace="layout/layout :: header"></header>
+<header th:replace="layout/layout :: header"></header>
+ <div class="container">
 
-
-	<div class="container py-4">
 		<div class="card" >
-			<div class="card-header">Registrar Proveedor</div>
+			<div class="card-header">Actualizar Proveedor</div>
 			<div class="card-body">
 
-				<form th:object="${provider}" th:action="@{/providers/save}"
+				<form th:object="${provider}"  th:action="@{/providers/update/{id}(id=${provider.id})}" 
 					th:method="post">
 					<div class="form-group">
 						<input type="hidden" class="form-control" th:field="*{id}" />
@@ -22,10 +21,10 @@
 					<div class="form-group">
 						<label for="name">Name</label> <input type="text"
 							class="form-control" id="name" aria-describedby="name"
-							th:field="*{name}">
+							th:field="*{name}"  />
 					</div>
 					<div class="form-group">
-						<label for="email">Email</label> <input type="email"
+						<label for="email">Email</label> <input type="text"
 							class="form-control" id="email" aria-describedby="email"
 							th:field="*{email}" />
 					</div>
@@ -39,14 +38,15 @@
 							class="form-control" id="ruc" aria-describedby="ruc"
 							th:field="*{ruc}" />
 					</div>
-					<a th:href="@{/providers}" class="btn btn-primary">Regresar</a>
-					<button type="submit" class="btn btn-success">Guardar</button>
+					
+					<a th:href="@{/providers/}" class="btn btn-primary">Regresar</a>
+					<button type="submit" class="btn btn-success">Save</button>
 				</form>
 			</div>
 		</div>
+
 	</div>
-
-	<footer th:replace="layout/layout :: footer"></footer>
-
+ 
+ <footer th:replace="layout/layout :: footer"></footer>
 </body>
 </html>
