--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head">
 <meta charset="UTF-8" />
-<title>List Category</title>
+<title>List Productos</title>
 </head>
 <body>
 	<header th:replace="layout/layout :: header"></header>
@@ -28,7 +28,6 @@
 							<th>Precio untario</th>
 							<th>Categoria</th>
 							<th>Proveedor</th>
-							<th>Ver</th>
 							<th>Editar</th>
 							<th>Eliminar</th>
 						</tr>
