--- a/src/main/resources/templates/products/new.html
+++ b/src/main/resources/templates/products/new.html
@@ -1,59 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<th:block th:include="fragments/head"></th:block>
+<head th:replace="layout/layout :: head">
+<meta charset="UTF-8" />
+<title>Nuevo producto</title>
+</head>
 <body>
+	<header th:replace="layout/layout :: header"></header>
 
-	<th:block th:include="fragments/navbar"></th:block>
-	<div class="container">
 
-		<div class="card" style="max-width: 100%;">
-			<div class="card-header">Registrar Libro</div>
+	<div class="container py-4">
+		<div class="card" >
+			<div class="card-header">Registrar Producto</div>
 			<div class="card-body">
 
-				<form th:object="${book}" th:action="@{/books/save}"
+				<form th:object="${product}" th:action="@{/products/save}"
 					th:method="post">
 					<div class="form-group">
 						<input type="hidden" class="form-control" th:field="*{id}" />
 					</div>
-
+					
 					<div class="form-group">
-						<label for="title">Title</label> <input type="text"
-							class="form-control" id="title" aria-describedby="title"
-							th:field="*{title}" placeholder="type here ..." />
+						<label for="name">Name</label> <input type="text"
+							class="form-control" id="name" aria-describedby="name"
+							th:field="*{name}">
 					</div>
-
 					<div class="form-group">
-						<label for="author">Author</label> <input type="text"
-							class="form-control" id="author" aria-describedby="author"
-							th:field="*{author}" placeholder="type here ..." />
+						<label for="ubicacion">Ubicacion</label> <input type="text"
+							class="form-control" id="ubicacion" aria-describedby="ubicacion"
+							th:field="*{ubication}" />
 					</div>
-
 					<div class="form-group">
-						<label for="category">Category</label> <select id="category"
+						<label for="quantity">Cantidad</label> <input type="text"
+							class="form-control" id="quantity" aria-describedby="quantity"
+							th:field="*{quantity}" />
+					</div>
+					<div class="form-group">
+						<label for="expirationDatec">Fecha expiracion</label> <input type="text"
+							class="form-control" id="expirationDate" aria-describedby="expirationDate"
+							th:field="*{expirationDate}" />
+					</div>
+					<div class="form-group">
+						<label for="unitPrice">Precio Unitario</label> <input type="text"
+							class="form-control" id="unitPrice" aria-describedby="unitPrice"
+							th:field="*{unitPrice}" />
+					</div>
+					<div class="form-group">
+						<label for="category">Categoria</label> <select id="category"
 							class="form-control" th:field="*{categories}" multiple="multiple">
 							<option th:each="category : ${categories}"
 								th:text="${category.name}" th:value="${category.id}"></option>
 						</select>
 					</div>
+						
 					<div class="form-group">
-						<label for="date">Year</label> <input type="text"
-							class="form-control" id="date" th:field="*{dateField}" />
+						<label for="provider">Proveedor</label> <select id="provider"
+							class="form-control" th:field="*{providers}" multiple="multiple">
+							<option th:each="provider : ${providers}"
+								th:text="${provider.name}" th:value="${provider.id}"></option>
+						</select>
 					</div>
-					<div class="form-group">
-						<label for="description">Description</label>
-						<textarea rows="4" type="textarea" class="form-control"
-							id="description" th:field="*{description}"
-							playeholder="type here ..." /></textarea>
-					</div>
-
-					<a th:href="@{/books/}" class="btn btn-primary">Regresar</a>
-					<button type="submit" class="btn btn-success">Save</button>
+					<a th:href="@{/products/}" class="btn btn-primary">Regresar</a>
+					<button type="submit" class="btn btn-success">Guardar</button>
 				</form>
 			</div>
 		</div>
-
 	</div>
-	<th:block th:include="fragments/scripts"></th:block>
+
+	<footer th:replace="layout/layout :: footer"></footer>
 
 </body>
 </html>
