--- a/src/main/resources/templates/categories/list.html
+++ b/src/main/resources/templates/categories/list.html
@@ -13,7 +13,7 @@
 
 			<div class="card-header">
 				<h3 class="text-center" th:text="${titulo}"></h3>
-				
+
 			</div>
 			<div class="card-body ">
 				<a th:href="@{/categories/new}" class="btn btn-primary">Nuevo</a>
@@ -38,10 +38,22 @@
 					</tbody>
 				</table>
 			</div>
+
 		</div>
 
 
 	</div>
+
+	<nav aria-label="Page navigation example">
+		<ul class="pagination justify-content-center">
+			<li class="page-item disabled"><a class="page-link" href="#"
+				tabindex="-1" aria-disabled="true">Previous</a></li>
+			<li class="page-item"><a class="page-link" href="#">1</a></li>
+			<li class="page-item"><a class="page-link" href="#">2</a></li>
+			<li class="page-item"><a class="page-link" href="#">3</a></li>
+			<li class="page-item"><a class="page-link" href="#">Next</a></li>
+		</ul>
+	</nav>
 
 	<footer th:replace="layout/layout :: footer"></footer>
 
