--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -12,8 +12,8 @@
 		<div class="card  border border-primary bg-light ">
 
 			<div class="card-header">
-				<h3 class="text-center"> Listado de Productos</h3>
-				
+				<h3 class="text-center">Listado de Productos</h3>
+
 			</div>
 			<div class="card-body ">
 				<a th:href="@{/products/new}" class="btn btn-primary">Nuevo</a>
@@ -43,12 +43,10 @@
 							<td th:text="${product.unitPrice}"></td>
 							<td><th:block th:each="category : ${product.categories}">
 									<span th:text="${category.name} + ' '"></span>
-								</th:block>
-							</td>
+								</th:block></td>
 							<td><th:block th:each="provider : ${product.providers}">
 									<span th:text="${provider.name} + ' '"></span>
-								</th:block>
-							</td>
+								</th:block></td>
 							<td><a th:href="@{'/products/edit/'+ ${product.id}}"
 								class="btn btn-success">Editar</a></td>
 							<td><a th:href="@{'/products/delete/' + ${product.id}}"
@@ -56,13 +54,23 @@
 						</tr>
 					</tbody>
 				</table>
-				
+
 			</div>
 		</div>
 
 
 	</div>
 
+	<nav aria-label="Page navigation example">
+		<ul class="pagination justify-content-center">
+			<li class="page-item disabled"><a class="page-link" href="#"
+				tabindex="-1" aria-disabled="true">Previous</a></li>
+			<li class="page-item"><a class="page-link" href="#">1</a></li>
+			<li class="page-item"><a class="page-link" href="#">2</a></li>
+			<li class="page-item"><a class="page-link" href="#">3</a></li>
+			<li class="page-item"><a class="page-link" href="#">Next</a></li>
+		</ul>
+	</nav>
 	<footer th:replace="layout/layout :: footer"></footer>
 
 </body>
