--- a/src/main/resources/templates/providers/list.html
+++ b/src/main/resources/templates/providers/list.html
@@ -7,7 +7,7 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 
-	
+
 	<div class="container py-4">
 		<div class="card  border border-primary bg-light ">
 
@@ -15,7 +15,7 @@
 				<h3 class="text-center" th:text="${titulo}"></h3>
 			</div>
 			<div class="card-body ">
-			<a th:href="@{/providers/new}" class="btn btn-primary">Nuevo</a>
+				<a th:href="@{/providers/new}" class="btn btn-primary">Nuevo</a>
 				<table class="table table-striped ">
 					<thead>
 						<tr>
@@ -24,20 +24,19 @@
 							<th>Email</th>
 							<th>Phone</th>
 							<th>Ruc</th>
-							
 					</thead>
-					<tbody >
+					<tbody>
 						<tr th:each="provider :${providers}">
-							
+
 							<td th:text="${provider.id}"></td>
 							<td th:text="${provider.name}"></td>
 							<td th:text="${provider.email}"></td>
 							<td th:text="${provider.phone}"></td>
 							<td th:text="${provider.ruc}"></td>
-							<td>
-							  <a th:href="@{'/providers/edit/'+ ${provider.id}}" class="btn btn-success">Editar</a>
-							</td>
-							<td><a th:href="@{'/providers/delete/' + ${provider.id}}" class="btn btn-danger">Eliminar</a></td>
+							<td><a th:href="@{'/providers/edit/'+ ${provider.id}}"
+								class="btn btn-success">Editar</a></td>
+							<td><a th:href="@{'/providers/delete/' + ${provider.id}}"
+								class="btn btn-danger">Eliminar</a></td>
 						</tr>
 					</tbody>
 				</table>
@@ -46,6 +45,17 @@
 
 
 	</div>
+
+	<nav aria-label="Page navigation example">
+		<ul class="pagination justify-content-center">
+			<li class="page-item disabled"><a class="page-link" href="#"
+				tabindex="-1" aria-disabled="true">Previous</a></li>
+			<li class="page-item"><a class="page-link" href="#">1</a></li>
+			<li class="page-item"><a class="page-link" href="#">2</a></li>
+			<li class="page-item"><a class="page-link" href="#">3</a></li>
+			<li class="page-item"><a class="page-link" href="#">Next</a></li>
+		</ul>
+	</nav>
 
 	<footer th:replace="layout/layout :: footer"></footer>
 
