--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -7,7 +7,7 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 
-	
+
 	<div class="container py-4">
 		<div class="card  border border-primary bg-light ">
 
@@ -15,26 +15,26 @@
 				<h3 class="text-center" th:text="${titulo}"></h3>
 			</div>
 			<div class="card-body ">
-			<a th:href="@{/users/new}" class="btn btn-primary">Nuevo</a>
+				<a th:href="@{/users/new}" class="btn btn-primary">Nuevo</a>
 				<table class="table table-striped ">
 					<thead>
 						<tr>
 							<th scope="col">#</th>
 							<th>Nombre</th>
 							<th>Apellido</th>
-							
-							
+							<th>Fecha de Ingreso</th>
 					</thead>
-					<tbody >
+					<tbody>
 						<tr th:each="user :${users}">
-							
+
 							<td th:text="${user.id}"></td>
 							<td th:text="${user.name}"></td>
 							<td th:text="${user.lastName}"></td>
-							<td>
-							  <a th:href="@{'/users/edit/'+ ${user.id}}" class="btn btn-success">Editar</a>
-							</td>
-							<td><a th:href="@{'/users/delete/' + ${user.id}}" class="btn btn-danger">Eliminar</a></td>
+							<td th:text="${user.creatAt}"></td>
+							<td><a th:href="@{'/users/edit/'+ ${user.id}}"
+								class="btn btn-success">Editar</a></td>
+							<td><a th:href="@{'/users/delete/' + ${user.id}}"
+								class="btn btn-danger">Eliminar</a></td>
 						</tr>
 					</tbody>
 				</table>
@@ -43,6 +43,17 @@
 
 
 	</div>
+
+	<nav aria-label="Page navigation example">
+		<ul class="pagination justify-content-center">
+			<li class="page-item disabled"><a class="page-link" href="#"
+				tabindex="-1" aria-disabled="true">Previous</a></li>
+			<li class="page-item"><a class="page-link" href="#">1</a></li>
+			<li class="page-item"><a class="page-link" href="#">2</a></li>
+			<li class="page-item"><a class="page-link" href="#">3</a></li>
+			<li class="page-item"><a class="page-link" href="#">Next</a></li>
+		</ul>
+	</nav>
 
 	<footer th:replace="layout/layout :: footer"></footer>
 
