--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -28,6 +28,11 @@
 							class="form-control" id="lastname" aria-describedby="lastname"
 							th:field="*{lastName}" />
 					</div>
+					<div class="form-group">
+						<label for="creatAt">fecha de ingreso</label> <input type="text"
+							class="form-control" id="creatAt" aria-describedby="creatAt"
+							th:field="*{creatAt}" />
+					</div>
 					
 					
 					<a th:href="@{/users}" class="btn btn-primary">Regresar</a>
