--- a/src/main/resources/templates/providers/new.html
+++ b/src/main/resources/templates/providers/new.html
@@ -23,21 +23,26 @@
 						<label for="name">Name</label> <input type="text"
 							class="form-control" id="name" aria-describedby="name"
 							th:field="*{name}">
+							<small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" 
+							th:errors="*{name}"></small>
 					</div>
 					<div class="form-group">
 						<label for="email">Email</label> <input type="email"
 							class="form-control" id="email" aria-describedby="email"
 							th:field="*{email}" />
+							
 					</div>
 					<div class="form-group">
 						<label for="phone">Phone</label> <input type="text"
 							class="form-control" id="phone" aria-describedby="phone"
 							th:field="*{phone}" />
+							
 					</div>
 					<div class="form-group">
 						<label for="ruc">Ruc</label> <input type="text"
 							class="form-control" id="ruc" aria-describedby="ruc"
 							th:field="*{ruc}" />
+							
 					</div>
 					<a th:href="@{/providers}" class="btn btn-primary">Regresar</a>
 					<button type="submit" class="btn btn-success">Guardar</button>
