--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -31,6 +31,12 @@
 							th:field="*{lastName}" />
 							<small class="form-text text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></small>
 					</div>
+					<div class="form-group">
+						<label for="creatAt">fecha de ingreso</label> <input type="text"
+							class="form-control" id="creatAt" aria-describedby="creatAt"
+							th:field="*{creatAt}"  placeholder="formato de fecha (dia-mes-año)"/>
+							<small class="form-text text-danger" th:if="${#fields.hasErrors('creatAt')}" th:errors="*{lastName}"></small>
+					</div>
 					
 					<a th:href="@{/users}" class="btn btn-primary">Regresar</a>
 					<button type="submit" class="btn btn-success">Guardar</button>
