--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -50,7 +50,7 @@
 							<td><a th:href="@{'/products/edit/'+ ${product.id}}"
 								class="btn btn-success">Editar</a></td>
 							<td><a th:href="@{'/products/delete/' + ${product.id}}"
-								class="btn btn-danger">Eliminar</a></td>
+								class="btn btn-danger" onclick="return confirm('Estas seguro de que quieres eliminar');">Eliminar</a></td>
 						</tr>
 					</tbody>
 				</table>
