--- a/src/main/resources/templates/providers/list.html
+++ b/src/main/resources/templates/providers/list.html
@@ -36,7 +36,7 @@
 							<td><a th:href="@{'/providers/edit/'+ ${provider.id}}"
 								class="btn btn-success">Editar</a></td>
 							<td><a th:href="@{'/providers/delete/' + ${provider.id}}"
-								class="btn btn-danger">Eliminar</a></td>
+								class="btn btn-danger" onclick="return confirm('Estas seguro de que quieres eliminar');">Eliminar</a></td>
 						</tr>
 					</tbody>
 				</table>
