--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -18,9 +18,9 @@
 			<div class="card-body ">
 				<a th:href="@{/products/new}" class="btn btn-primary">Nuevo</a>
 				<table class="table table-striped">
-					<thead>
+					<thead class="bg-dark text-white">
 						<tr>
-							<th scope="col">#</th>
+							<th scope="col">Id</th>
 							<th>Name</th>
 							<th>Ubicacion</th>
 							<th>Cantidad</th>
