--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -85,11 +85,10 @@
 	</header>
 
 
-	<footer th:fragment="footer">
+	<footer th:fragment="footer" class="bg-light">
 
 		<hr />
 		<!-- 		<img th:src="@{/images/spring.png}" alt="Spring logo" /> -->
-
 		<p>
 			Este proyecto fue desarrollado en STS (STS Spring Tool),en hora
 			buena. <br /> &copy; Company 2019, Inc. Todos los derechos
