--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -9,35 +9,43 @@
 
 
 	<div class="container py-4">
-		<div class="card" >
+		<div class="card">
 			<div class="card-header">Registrar User</div>
 			<div class="card-body">
+			
+				<div th:object="${user}" th:remove="tag">
+					<ul th:if="${#fields.hasErrors('*')}" class="alert alert-info" >
+						<li th:each="err:${#fields.errors('*')}" th:text="${err}"></li>
+					</ul>
+				</div>
 
 				<form th:object="${user}" th:action="@{/users/save}"
 					th:method="post">
 					<div class="form-group">
 						<input type="hidden" class="form-control" th:field="*{id}" />
 					</div>
-					
+
 					<div class="form-group">
 						<label for="name">Name</label> <input type="text"
 							class="form-control" id="name" aria-describedby="name"
-							th:field="*{name}"/>
-							<small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
+							th:field="*{name}" /> <small class="form-text text-danger"
+							th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
 					</div>
 					<div class="form-group">
 						<label for="lastname">LastName</label> <input type="text"
 							class="form-control" id="lastname" aria-describedby="lasname"
-							th:field="*{lastName}" />
-							<small class="form-text text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></small>
+							th:field="*{lastName}" /> <small class="form-text text-danger"
+							th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></small>
 					</div>
 					<div class="form-group">
 						<label for="creatAt">fecha de ingreso</label> <input type="text"
 							class="form-control" id="creatAt" aria-describedby="creatAt"
-							th:field="*{creatAt}"  placeholder="formato de fecha (dia-mes-año)"/>
-							<small class="form-text text-danger" th:if="${#fields.hasErrors('creatAt')}" th:errors="*{lastName}"></small>
+							th:field="*{creatAt}"
+							placeholder="formato de fecha (dia-mes-año)" /> <small
+							class="form-text text-danger"
+							th:if="${#fields.hasErrors('creatAt')}" th:errors="*{lastName}"></small>
 					</div>
-					
+
 					<a th:href="@{/users}" class="btn btn-primary">Regresar</a>
 					<button type="submit" class="btn btn-success">Guardar</button>
 				</form>
