--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -66,8 +66,8 @@
 								aria-haspopup="true" aria-expanded="false">Usuario</a>
 
 							<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-								<a class="dropdown-item" th:href="@{/users}">Listado
-									de Usuario</a>
+								<a class="dropdown-item" th:href="@{/employees}">Listado
+									de Empleado</a>
 							</div>
 						</div>
 
