--- a/src/main/resources/templates/providers/new.html
+++ b/src/main/resources/templates/providers/new.html
@@ -9,40 +9,44 @@
 
 
 	<div class="container py-4">
-		<div class="card" >
+		<div class="card">
 			<div class="card-header">Registrar Proveedor</div>
 			<div class="card-body">
+				<div th:object="${provider}" th:remove="tag">
+					<ul th:if="${#fields.hasErrors('*')}" class="alert alert-info">
+						<li th:each="err:${#fields.errors('*')}" th:text="${err}"></li>
+					</ul>
+				</div>
 
 				<form th:object="${provider}" th:action="@{/providers/save}"
 					th:method="post">
 					<div class="form-group">
 						<input type="hidden" class="form-control" th:field="*{id}" />
 					</div>
-					
+
 					<div class="form-group">
 						<label for="name">Name</label> <input type="text"
 							class="form-control" id="name" aria-describedby="name"
-							th:field="*{name}">
-							<small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" 
-							th:errors="*{name}"></small>
+							th:field="*{name}"> <small class="form-text text-danger"
+							th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
 					</div>
 					<div class="form-group">
 						<label for="email">Email</label> <input type="email"
 							class="form-control" id="email" aria-describedby="email"
 							th:field="*{email}" />
-							
+
 					</div>
 					<div class="form-group">
 						<label for="phone">Phone</label> <input type="text"
 							class="form-control" id="phone" aria-describedby="phone"
 							th:field="*{phone}" />
-							
+
 					</div>
 					<div class="form-group">
 						<label for="ruc">Ruc</label> <input type="text"
 							class="form-control" id="ruc" aria-describedby="ruc"
 							th:field="*{ruc}" />
-							
+
 					</div>
 					<a th:href="@{/providers}" class="btn btn-primary">Regresar</a>
 					<button type="submit" class="btn btn-success">Guardar</button>
