--- a/src/main/resources/templates/employees/view.html
+++ b/src/main/resources/templates/employees/view.html
@@ -23,7 +23,7 @@
 			</div>
 
 			<div class="alert alert-info my-4"
-				th:text="'EL empleado ' +${employee.name}+' '+ ${employee.lastName} + ' no ha realizado ningun venta'"></div>
+				th:text="'El empleado ' +${employee.name}+' '+ ${employee.lastName} + ' no ha realizado ningun venta'"></div>
 		</div>
 	</div>
 
