--- a/src/main/resources/templates/paginator-nav.html
+++ b/src/main/resources/templates/paginator-nav.html
@@ -2,29 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 
-	<nav th:fragment="paginator">
-		<ul class="pagination">
-			<li><span th:if="${page.first}">primera</span><a
-				th:if="${not page.first}" th:href="@{${page.url}(page=0)}">primera</a>
+	<nav th:fragment="paginator" >
+		<ul class="pagination justify-content-center">
+			<li class="page-item"><span class="page-link" th:if="${page.first}">Primera</span><a class="page-link"
+				th:if="${not page.first}" th:href="@{${page.url}(page=0)}">Primera</a>
 			</li>
 
-			<li><span th:if="${not page.hasPrevious}">anterior</span><a
-				th:if="${page.hasPrevious}"
-				th:href="@{${page.url}(page=${page.pageActual-2})}">anterior</a></li>
+			<li class="page-item"><span class="page-link" th:if="${not page.hasPrevious}">&laquo;</span><a
+				 class="page-link" th:if="${page.hasPrevious}"
+				th:href="@{${page.url}(page=${page.pageActual-2})}">&laquo;</a></li>
 
-			<li th:each="item : ${page.pages}"><span th:if="${item.actual}"
-				th:text="${item.number}"></span> <a th:if="${not item.actual}"
+			<li class="page-item" th:each="item : ${page.pages}"><span class="page-link" th:if="${item.actual}"
+				th:text="${item.number}"></span> <a class="page-link" th:if="${not item.actual}"
 				th:href="@{${page.url}(page=${item.number-1})}"
 				th:text="${item.number}"></a></li>
 
 
-			<li><span th:if="${not page.hasNext}">siguente</span><a
-				th:if="${page.hasNext}"
-				th:href="@{${page.url}(page=${page.pageActual})}">siguiente</a></li>
+			<li class="page-item"><span class="page-link"  th:if="${not page.hasNext}">&raquo;</span><a
+				 class="page-link" th:if="${page.hasNext}"
+				th:href="@{${page.url}(page=${page.pageActual})}">&raquo;</a></li>
 
-			<li><span th:if="${page.last}">ultima</span><a
-				th:if="${not page.last}"
-				th:href="@{${page.url}(page=${page.totalPages-1})}">ultima</a></li>
+			<li class="page-item"><span class="page-link" th:if="${page.last}">&Uacute;ltima</span><a
+				 class="page-link" th:if="${not page.last}"
+				th:href="@{${page.url}(page=${page.totalPages-1})}">&Uacute;ltima</a></li>
 		</ul>
 	</nav>
 </body>
