--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -72,6 +72,11 @@
 						</div>
 
 					</li>
+					
+					<li class="dropdown nav-item"><a th:href="@{/logout}"
+					class="nav-link" > <i
+						class="material-icons">apps</i> Sign Out
+				</a></li>
 				</ul>
 			</div>
 		</nav>
