--- a/src/main/resources/templates/employees/new.html
+++ b/src/main/resources/templates/employees/new.html
@@ -10,7 +10,7 @@
 
 	<div class="container py-4">
 		<div class="card">
-			<div class="card-header">Registrar User</div>
+			<div class="card-header">Registrar Empleado</div>
 			<div class="card-body">
 			
 				<div th:object="${employee}" th:remove="tag">
