--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -63,7 +63,7 @@
 						<div class="dropdown">
 							<a class="btn btn-light dropdown-toggle" href="#" role="button"
 								id="dropdownMenuLink" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">Usuario</a>
+								aria-haspopup="true" aria-expanded="false">Empleado</a>
 
 							<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 								<a class="dropdown-item" th:href="@{/employees}">Listado
