--- a/src/main/resources/templates/employees/list.html
+++ b/src/main/resources/templates/employees/list.html
@@ -37,7 +37,7 @@
 							<td th:text="${employee.name}"></td>
 							<td th:text="${employee.lastName}"></td>
 							<td th:text="${employee.creatAt}"></td>
-							<td><a th:href="@{'/tickets/form'+${employee.id}}" >Crear Factura</a></td>
+							<td><a th:href="@{'/tickets/form/'+${employee.id}}" >Crear Factura</a></td>
 							<td><a th:href="@{'/employees/edit/'+ ${employee.id}}"
 								class="btn btn-success">Editar</a></td>
 							<td><a th:href="@{'/employees/delete/' + ${employee.id}}"
