--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/layout :: head">
 
 <body class="index-page sidebar-collapse">
@@ -20,7 +20,7 @@
 							</div>
 
 							<div th:if="${param.logout}">
-								<div class="alert alert-success">Ha cerrado sesión</div>
+								<div class="alert alert-success">Ha cerrado sesion</div>
 							</div>
 
 							<div class="form-group">
