--- a/src/main/resources/templates/tickets/new.html
+++ b/src/main/resources/templates/tickets/new.html
@@ -13,7 +13,7 @@
 			<div class="card-header" th:tetx="${titulo}"></div>
 			<div class="card-body">
 
-				<form th:object="${ticket}" th:action="@{/tickets/form/}"
+				<form th:object="${ticket}" th:action="@{/tickets/save}"
 					th:method="post">
 
 <!-- 					<div class="form-group"> -->
@@ -25,7 +25,7 @@
 <!-- 					</div> -->
 
 					<div class="form-group">
-						<label class="col-sm-2 col-form-label" for="description">Descripción</label>
+						<label class="col-sm-2 col-form-label" for="description">Descripcion</label>
 						<div class="col-sm-6">
 							<input type="text" class="form-control" id="description"
 								aria-describedby="description" th:field="*{description}"/>
